# audiobookshelf-cli

./: .env.example  .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  README.md  ehb4gtfurnhiq8uk1gbpaljnkvvhoj5o  go.mod  go.sum  main.go  manifest
.agents/skills/abs/: SKILL.md
.agents/skills/abs/references/: workflows.md
.beads/: config.yaml  issues.jsonl  metadata.json
.github/workflows/: ci.yml  release.yml
pkg/client/: client.go
pkg/commands/: auth.go  help_json.go  info.go  items.go  libraries.go  root.go  search.go  upload.go
pkg/config/: config.go
pkg/utils/: utils.go
src/: client.rs  commands.rs  main.rs  models.rs
tests/: e2e.rs
