[package]
name = "abs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
comfy-table = "7.1"
config = "0.14"
directories = "5.0"
serde_yaml = "0.9"
keyring = "3.6.2"
clap_complete = "4.5"

[dev-dependencies]
mockito = "1.6"
